--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.thundermoose</groupId>
   <artifactId>xlsx-streamer</artifactId>
-  <version>0.1</version>
+  <version>0.2-SNAPSHOT</version>
 
   <build>
     <plugins>
