--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,17 @@
   <groupId>com.monitorjbl</groupId>
   <artifactId>xlsx-streamer</artifactId>
   <version>0.2.3</version>
+  <name>Streaming Excel reader</name>
+  <description>Streaming Excel reader</description>
+  <url>https://github.com/monitorjbl/excel-streaming-reader</url>
+
+  <developers>
+    <developer>
+      <id>monitorjbl</id>
+      <name>Taylor Jones</name>
+      <email>monitorjbl@gmail.com</email>
+    </developer>
+  </developers>
 
   <build>
     <plugins>
@@ -20,8 +31,17 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-install-plugin</artifactId>
-        <version>2.5.1</version>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.6</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
