--- a/pom.xml
+++ b/pom.xml
@@ -117,8 +117,8 @@
     </dependency>
     <dependency>
       <groupId>org.apache.poi</groupId>
-      <artifactId>ooxml-schemas</artifactId>
-      <version>1.3</version>
+      <artifactId>poi-ooxml-schemas</artifactId>
+      <version>3.17</version>
     </dependency>
     <dependency>
       <groupId>com.rackspace.apache</groupId>
