use poi 4.0.0 rc1

--- a/pom.xml
+++ b/pom.xml
@@ -109,42 +109,30 @@
     </repository>
   </distributionManagement>
 
+
+  <repositories>
+    <repository>
+      <id>apache-staging-repo</id>
+      <name>apache staging repo</name>
+      <url>https://repository.apache.org/content/repositories/staging</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
-      <version>4.0.0-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/lib/poi-4.0.0-SNAPSHOT.jar</systemPath>
+      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
-      <version>4.0.0-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/lib/poi-ooxml-4.0.0-SNAPSHOT.jar</systemPath>
+      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml-schemas</artifactId>
-      <version>4.0.0-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/lib/poi-ooxml-schemas-4.0.0-SNAPSHOT.jar</systemPath>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.xmlbeans</groupId>
-      <artifactId>xmlbeans</artifactId>
-      <version>3.0.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-compress</artifactId>
-      <version>1.18</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-collections4</artifactId>
-      <version>4.2</version>
+      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.rackspace.apache</groupId>
