--- a/pom.xml
+++ b/pom.xml
@@ -112,9 +112,9 @@
 
   <repositories>
     <repository>
-      <id>apache-staging-repo</id>
-      <name>apache staging repo</name>
-      <url>https://repository.apache.org/content/repositories/staging</url>
+      <id>apache-releases-repo</id>
+      <name>apache releases repo</name>
+      <url>https://repository.apache.org/content/repositories/releases</url>
     </repository>
   </repositories>
 
