--- a/pom.xml
+++ b/pom.xml
@@ -109,16 +109,30 @@
     </repository>
   </distributionManagement>
 
+
+  <repositories>
+    <repository>
+      <id>apache-releases-repo</id>
+      <name>apache releases repo</name>
+      <url>https://repository.apache.org/content/repositories/releases</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.poi</groupId>
-      <artifactId>poi-ooxml</artifactId>
-      <version>3.17</version>
+      <artifactId>poi</artifactId>
+      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.poi</groupId>
-      <artifactId>ooxml-schemas</artifactId>
-      <version>1.3</version>
+      <artifactId>poi-ooxml</artifactId>
+      <version>4.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml-schemas</artifactId>
+      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.rackspace.apache</groupId>
