--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,11 @@
       <version>4.0.0</version>
     </dependency>
     <dependency>
+      <groupId>com.github.pjfanning</groupId>
+      <artifactId>poi-shared-strings</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+    <dependency>
       <groupId>com.rackspace.apache</groupId>
       <artifactId>xerces2-xsd11</artifactId>
       <version>2.11.1</version>
