--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.monitorjbl</groupId>
   <artifactId>xlsx-streamer</artifactId>
-  <version>1.2.2-SNAPSHOT</version>
+  <version>2.0.0</version>
   <name>Streaming Excel reader</name>
   <description>Streaming Excel reader</description>
   <url>https://github.com/monitorjbl/excel-streaming-reader</url>
