--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.pjfanning</groupId>
   <artifactId>excel-streaming-reader</artifactId>
-  <version>2.1.1-SNAPSHOT</version>
+  <version>2.1.1</version>
   <name>Streaming Excel reader</name>
   <description>Streaming Excel reader</description>
   <url>https://github.com/pjfanning/excel-streaming-reader</url>
@@ -113,19 +113,6 @@
       <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
     </repository>
   </distributionManagement>
-
-  <repositories>
-    <repository>
-      <id>sonatype-staging</id>
-      <name>sonatype staging</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </repository>
-    <repository>
-      <id>apache-staging</id>
-      <name>apache staging</name>
-      <url>https://repository.apache.org/content/repositories/staging</url>
-    </repository>
-  </repositories>
 
   <dependencies>
     <dependency>
