--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,14 @@
     </dependency>
   </dependencies>
 
+  <!-- Override default to force https. Can be removed when Shippable is updated with new Maven version. -->
+  <repositories>
+    <repository>
+      <id>central</id>
+      <name>Maven Plugin Repository</name>
+      <url>https://repo.maven.apache.org/maven2</url>
+    </repository>
+  </repositories>
   <pluginRepositories>
     <pluginRepository>
       <id>central</id>
