--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
       <artifactId>slf4j-api</artifactId>
       <version>1.7.30</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.8.0</version>
+    </dependency>
 
     <dependency>
       <groupId>org.slf4j</groupId>
