--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.3.0</version>
+        <configuration>
+          <additionalOptions>
+            <additionalOption>-Xdoclint:none</additionalOption>
+          </additionalOptions>
+        </configuration>
         <executions>
           <execution>
             <id>attach-sources</id>
