--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-library'
+    id 'signing'
     id 'maven-publish'
     id("io.github.gradle-nexus.publish-plugin") version "1.1.0"
 }
@@ -63,4 +64,8 @@ publishing {
             }
         }
     }
+}
+
+signing {
+    sign publishing.publications.mavenJava
 }
