--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,11 @@ dependencies {
     testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.32'
 }
 
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
 nexusPublishing {
     repositories {
         sonatype()
