Test time zone - try to fix issue with running in non-UTC time zones (#68)

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,12 @@ dependencies {
     testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.32'
 }
 
+test {
+    options {
+        systemProperties(System.getProperties())
+    }
+}
+
 java {
     withJavadocJar()
     withSourcesJar()
