--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.nanohttpd:nanohttpd:2.3.1'
     testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.32'
+    testRuntimeOnly 'org.apache.logging.log4j:log4j-to-slf4j:2.14.1'
 }
 
 test {
