--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.github.pjfanning'
-version = '3.2.2'
+version = '3.2.3-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
@@ -17,7 +17,7 @@ repositories {
 dependencies {
     api 'org.apache.poi:poi:5.1.0'
     api 'org.apache.poi:poi-ooxml:5.1.0'
-    implementation 'com.github.pjfanning:poi-shared-strings:2.2.0'
+    implementation 'com.github.pjfanning:poi-shared-strings:2.2.1'
     implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'commons-io:commons-io:2.11.0'
     testImplementation 'junit:junit:4.13.2'
