--- a/build.gradle
+++ b/build.gradle
@@ -24,14 +24,14 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
 }
 
 dependencies {
-    api 'org.apache.poi:poi:5.1.0'
-    api 'org.apache.poi:poi-ooxml:5.1.0'
-    implementation 'com.github.pjfanning:poi-shared-strings:2.3.4'
+    api 'org.apache.poi:poi:5.2.0'
+    api 'org.apache.poi:poi-ooxml:5.2.0'
+    implementation 'com.github.pjfanning:poi-shared-strings:2.4.0'
     implementation 'org.slf4j:slf4j-api:1.7.33'
-    implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
     implementation 'commons-io:commons-io:2.11.0'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.nanohttpd:nanohttpd:2.3.1'
