--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ sonarqube {
 }
 
 group = 'com.github.pjfanning'
-version = '3.6.2-SNAPSHOT'
+version = '4.0.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
@@ -35,6 +35,7 @@ dependencies {
     implementation 'commons-io:commons-io:2.11.0'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.nanohttpd:nanohttpd:2.3.1'
+    testImplementation 'org.mockito:mockito-core:4.4.0'
     testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.36'
     testRuntimeOnly 'org.apache.logging.log4j:log4j-to-slf4j:2.17.2'
 }
