--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ sonarqube {
 }
 
 group = 'com.github.pjfanning'
-version = '4.0.3-SNAPSHOT'
+version = '4.0.3'
 
 sourceCompatibility = 1.8
 
@@ -30,7 +30,7 @@ repositories {
 dependencies {
     api 'org.apache.poi:poi:5.2.3'
     api 'org.apache.poi:poi-ooxml:5.2.3'
-    implementation 'com.github.pjfanning:poi-shared-strings:2.5.4'
+    implementation 'com.github.pjfanning:poi-shared-strings:2.5.5'
     implementation 'org.slf4j:slf4j-api:1.7.36'
     implementation 'commons-io:commons-io:2.11.0'
     testImplementation 'junit:junit:4.13.2'
